--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "start": "brunch watch --server"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "material-ui": "^0.15.4",
+    "morgan": "^1.7.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-router": "^2.8.1",
