--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "scripts": {
     "deploy": "rm -rf public; brunch build --production; surge public",
+    "knex": "knex",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public",
     "start": "brunch watch --server"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "knex": "^0.12.1",
     "material-ui": "^0.15.4",
     "morgan": "^1.7.0",
+    "pg": "^6.1.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-router": "^2.8.1",
