--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "start": "brunch watch --server"
   },
   "dependencies": {
+    "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.15.2",
+    "boom": "^4.0.0",
     "express": "^4.14.0",
+    "humps": "^1.1.0",
+    "jsonwebtoken": "^7.1.9",
     "knex": "^0.12.1",
     "material-ui": "^0.15.4",
     "morgan": "^1.7.0",
