--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "boom": "^4.0.0",
     "express": "^4.14.0",
     "humps": "^1.1.0",
+    "joi": "^9.0.4",
     "jsonwebtoken": "^7.1.9",
     "knex": "^0.12.1",
     "material-ui": "^0.15.4",
