--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "start": "brunch watch --server"
   },
   "dependencies": {
+    "axios": "^0.14.0",
     "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.15.2",
     "boom": "^4.0.0",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "humps": "^1.1.0",
     "joi": "^9.0.4",
@@ -38,6 +40,7 @@
     "babel-preset-react": "^6.11.1",
     "brunch": "^2.8.2",
     "clean-css-brunch": "^2.0.0",
+    "dotenv": "^2.0.0",
     "eslint": "^3.4.0",
     "eslint-config-ryansobol": "^9.1.1",
     "javascript-brunch": "^2.0.0",
