--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.7.0",
     "pg": "^6.1.0",
     "react": "^15.3.1",
+    "react-cookie": "^0.4.8",
     "react-dom": "^15.3.1",
     "react-router": "^2.8.1",
     "react-tap-event-plugin": "^1.0.0"
