--- a/package.json
+++ b/package.json
@@ -43,15 +43,15 @@
     "react-tap-event-plugin": "^1.0.0",
     "javascript-brunch": "^2.0.0",
     "postcss-brunch": "^2.0.1",
-    "uglify-js-brunch": "^2.0.1"
-  },
-  "devDependencies": {
+    "uglify-js-brunch": "^2.0.1",
     "auto-reload-brunch": "^2.7.1",
     "babel-brunch": "^6.0.6",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "brunch": "^2.8.2",
-    "clean-css-brunch": "^2.0.0",
+    "clean-css-brunch": "^2.0.0"
+  },
+  "devDependencies": {
     "dotenv": "^2.0.0",
     "electron-prebuilt": "^1.4.1",
     "eslint": "^3.4.0",
