--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint": "eslint --ext .js,.jsx --ignore-pattern public",
     "resetdb": "knex migrate:rollback; knex migrate:latest; knex seed:run",
     "start": "brunch watch --server",
+    "test": "mocha",
     "estart": "electron ."
   },
   "dependencies": {
@@ -52,10 +53,12 @@
     "clean-css-brunch": "^2.0.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "dotenv": "^2.0.0",
     "electron-prebuilt": "^1.4.1",
     "eslint": "^3.4.0",
     "eslint-config-ryansobol": "^9.1.1",
+    "mocha": "^3.0.2",
     "surge": "^0.18.0"
   }
 }
