--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint": "^3.4.0",
     "eslint-config-ryansobol": "^9.1.1",
     "mocha": "^3.0.2",
+    "supertest": "^2.0.0",
     "surge": "^0.18.0"
   }
 }
