--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "electron-prebuilt": "^1.4.1",
     "eslint": "^3.4.0",
     "eslint-config-ryansobol": "^9.1.1",
+    "express-validation": "^1.0.1",
     "mocha": "^3.0.2",
     "supertest": "^2.0.0",
     "surge": "^0.18.0"
