--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "deploy": "rm -rf public; brunch build --production; surge public",
+    "electron-packager": "electron-packager",
     "heroku-postbuild": "brunch build",
     "knex": "knex",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "dotenv": "^2.0.0",
+    "electron-packager": "^8.0.0",
     "electron-prebuilt": "^1.4.1",
     "eslint": "^3.4.0",
     "eslint-config-ryansobol": "^9.1.1",
