--- a/package.json
+++ b/package.json
@@ -25,34 +25,35 @@
     "estart": "electron ."
   },
   "dependencies": {
+    "auto-reload-brunch": "^2.7.1",
     "axios": "^0.14.0",
+    "babel-brunch": "^6.0.6",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.15.2",
     "boom": "^4.0.0",
+    "brunch": "^2.8.2",
+    "clean-css-brunch": "^2.0.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-validation": "^1.0.1",
     "humps": "^1.1.0",
+    "javascript-brunch": "^2.0.0",
     "joi": "^9.0.4",
     "jsonwebtoken": "^7.1.9",
     "knex": "^0.12.1",
     "material-ui": "^0.15.4",
     "morgan": "^1.7.0",
     "pg": "^6.1.0",
+    "postcss-brunch": "^2.0.1",
     "react": "^15.3.1",
     "react-cookie": "^0.4.8",
+    "react-dimensions": "^1.3.0",
     "react-dom": "^15.3.1",
     "react-router": "^2.8.1",
     "react-tap-event-plugin": "^1.0.0",
-    "javascript-brunch": "^2.0.0",
-    "postcss-brunch": "^2.0.1",
-    "uglify-js-brunch": "^2.0.1",
-    "auto-reload-brunch": "^2.7.1",
-    "babel-brunch": "^6.0.6",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "brunch": "^2.8.2",
-    "clean-css-brunch": "^2.0.0"
+    "uglify-js-brunch": "^2.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
